--- a/crunch/home.html
+++ b/crunch/home.html
@@ -48,6 +48,8 @@
         <img class="idadeprin" src="/Carrossell/idade/idadee 14.png" alt="">
         <p class="lingprin">◆ Dub | Leg</p>
         <p class="sino">Após sofrer um vexame na Copa do Mundo de 2018, a seleção japonesa sofre para se recompor. Falta ao <br> time um artilheiro, uma estrela capaz de guiá-los à vitória. Com o intuito de criar um atacante com fome de bola e <br> sede de vitória, capaz de virar jogos tidos como impossíveis, a Confederação Japonesa de Futebol reune 300 dos <br> melhores jogadores de base do país em um só lugar. Centenas de jovens vão se enfrentar numa batalha de <br> músculos e de egos para provar que são os melhores.
+          <a class="verr verPromo" href="/crunch/seriesmodelo.html"> <strong><span class="seta">▷</span> <span class="com">COMEÇAR A ASSISTIR S1 E1</span></strong></a>
+          <img class="salvarr" src="imgs/filme e serie modelo/salvar laranja.png" alt="salvarL"> 
         </p>
       </div>
       <div class="slide">
@@ -57,38 +59,53 @@
         <p class="lingprin">◆ Dub | Leg</p>
         <p class="sino">Milhares de anos após um misterioso fenômeno transformar a humanidade inteira em pedra, desperta um garoto <br>extraordinariamente inteligente e motivado pela ciência - Senku Ishigami.
           Diante de um mundo de pedra e do <br> colapso generalizado da civilização, Senku decide usar sua mente para reconstruir o mundo. Ao lado de Taiju Oki, <br> seu amigo de infância absurdamente forte, eles começam a reestabelecer a civilização do zero...
-          Representando os <br>s milhões de anos da história da ciência, desde a Idade da Pedra até os dias atuais, esta aventura científica sem <br> precedentes está prestes a começar!</p>
+          Representando os <br>s milhões de anos da história da ciência, desde a Idade da Pedra até os dias atuais, esta aventura científica sem <br> precedentes está prestes a começar!
+          <a class="verr verPromo" href="/crunch/seriesmodelo.html"> <strong><span class="seta">▷</span> <span class="com">COMEÇAR A ASSISTIR S1 E1</span></strong></a>
+          <img class="salvarr stone" src="imgs/filme e serie modelo/salvar laranja.png" alt="salvarL"> 
+        </p>
       </div>
       <div class="slide">
         <img src="/Carrossell/Carrossel/jujutsu-kaisen.webp" alt="">
         <img class="juju" src="/Carrossell/Logos/Jujutsu_Kaisen_logo.png" alt="">
-        <img class="idadeprin" src="/Carrossell/idade/nr16-auto.png" alt="">
-        <p class="lingprin">◆ Dub | Leg</p>
+          <img class="idadeprin" src="/Carrossell/idade/nr16-auto.png" alt="">
+          <p class="lingprin">◆ Dub | Leg</p>
         <p class="sino">Yuji Itadori come um dedo amaldiçoado para salvar um colega de turma
           e agora Ryomen Sukuna,<br> um terrível e poderoso feiticeiro conhecido como
           o Rei das Maldições, habita na alma de Itadori. <br>As maldições são terrores 
-          sobrenaturais criados a partir das emoções humanas negativas.</p>
+          sobrenaturais criados a partir das emoções humanas negativas.
+          <a class="verr verPromo" href="/crunch/seriesmodelo.html"> <strong><span class="seta">▷</span> <span class="com">COMEÇAR A ASSISTIR S1 E1</span></strong></a>
+          <img class="salvarr" src="imgs/filme e serie modelo/salvar laranja.png" alt="salvarL"> 
+        </p>
       </div>
       <div class="slide">
         <img src="/Carrossell/Carrossel/chainsaw man carrosselll.jpg" alt="">
         <img class="blue " src="/Carrossell/Logos/logo chainsaw.png" alt="">
         <img class="idadeprin" src="/Carrossell/idade/nr16-auto.png" alt="">
         <p class="lingprin">◆ Dub | Leg</p>
-        <p class="sino">Denji é um adolescente que mora com Pochita, o Demônio da Motosserra. Por conta das dívidas que <br>herdou de seu pai, ele vive na miséria, exterminando outros demônios com Pochita para pagar as contas. <br> Até que, um dia, Denji é traído e morre. Em seus últimos momentos de consciência, ele firma um <br>contrato com Pochita e renasce como o Homem-Motosserra - um humano com coração de demônio.</p>
+        <p class="sino">Denji é um adolescente que mora com Pochita, o Demônio da Motosserra. Por conta das dívidas que <br>herdou de seu pai, ele vive na miséria, exterminando outros demônios com Pochita para pagar as contas. <br> Até que, um dia, Denji é traído e morre. Em seus últimos momentos de consciência, ele firma um <br>contrato com Pochita e renasce como o Homem-Motosserra - um humano com coração de demônio.
+          <a class="verr verPromo" href="/crunch/seriesmodelo.html"> <strong><span class="seta">▷</span> <span class="com">COMEÇAR A ASSISTIR S1 E1</span></strong></a>
+          <img class="salvarr" src="imgs/filme e serie modelo/salvar laranja.png" alt="salvarL"> 
+        </p>
       </div>
       <div class="slide">
         <img src="/Carrossell/Carrossel/shingeki carrossell.jpg" alt="">
         <img class="shin" src="/Carrossell/Logos/logo shingeki.png" alt="">
         <img class="idadeprin" src="/Carrossell/idade/nr16-auto.png" alt="">
         <p class="lingprin">◆ Dub | Leg</p>
-        <p class="sino">Há várias décadas atrás, a humanidade foi quase exterminada pelo súbito aparecimento de seres humanoides, <br>conhecido como Titãs. Criaturas de tamanho enorme e de inteligência aparentemente baixa, que comiam humanos <br> por prazer. No entanto, um pequeno grupo de seres humanos sobreviveu no interior de uma cidade protegida por paredes <br> superiores a três vezes a altura dos maiores Titãs registados até à data. Durante 107 anos, a cidade fortificada foi testemunha <br> de ataques dos Titãs sem sucesso, até que um dia, o jovem Eren Jaeger e sua irmã adotiva, Mikasa Ackerman, foram <br> testemunhas da aparição de um Titã colossal, fazendo uma abertura em uma das paredes exteriores da cidade, <br> o que permitiu a entrada de um grande grupo de Titãs menores. Ambos os filhos presenciam o horror de ver <br> sua mãe sendo comida viva por um deles. Desde aquele dia, Eren jurou vingança contra cada um dos Titãs.</p>
+        <p class="sino">Há várias décadas atrás, a humanidade foi quase exterminada pelo súbito aparecimento de seres humanoides, <br>conhecido como Titãs. Criaturas de tamanho enorme e de inteligência aparentemente baixa, que comiam humanos <br> por prazer. No entanto, um pequeno grupo de seres humanos sobreviveu no interior de uma cidade protegida por paredes <br> superiores a três vezes a altura dos maiores Titãs registados até à data. Durante 107 anos, a cidade fortificada foi testemunha <br> de ataques dos Titãs sem sucesso, até que um dia, o jovem Eren Jaeger e sua irmã adotiva, Mikasa Ackerman, foram <br> testemunhas da aparição de um Titã colossal, fazendo uma abertura em uma das paredes exteriores da cidade, <br> o que permitiu a entrada de um grande grupo de Titãs menores. Ambos os filhos presenciam o horror de ver <br> sua mãe sendo comida viva por um deles. Desde aquele dia, Eren jurou vingança contra cada um dos Titãs.
+          <a class="verr verPromo" href="/crunch/seriesmodelo.html"> <strong><span class="seta">▷</span> <span class="com">COMEÇAR A ASSISTIR S1 E1</span></strong></a>
+          <img class="salvarr" src="imgs/filme e serie modelo/salvar laranja.png" alt="salvarL"> 
+        </p>
       </div>
       <div class="slide">
         <img src="/Carrossell/Carrossel/SPY FAMILY.jpg" alt="">
         <img class="blue spy" src="/Carrossell/Logos/Spy_×_Family_logo.png" alt="">
         <img class="idadeprin" src="/Carrossell/idade/idadee 14.png" alt="">
         <p class="lingprin">◆ Dub | Leg</p>
-        <p class="sino">Há décadas, as nações de Ostania e Westalis promovem uma guerra fria sem fim. Para investigar os movimentos <br> do presidente de um importante partido político, Westalis mobiliza Twilight, seu melhor agente, a montar uma <br> família falsa e se infiltrar nos eventos sociais promovidos pela escola do filho do político. Mas por um acaso do <br> destino, Twilight acaba adotando Anya, uma jovem com poderes telepáticos, e se "casando" com Yor, uma <br> assassina profissional! Sem saberem das identidades uns dos outros, este trio incomum vai embarcar em aventuras <br> cheias de surpresas para garantir a paz mundial.</p>
+        <p class="sino">Há décadas, as nações de Ostania e Westalis promovem uma guerra fria sem fim. Para investigar os movimentos <br> do presidente de um importante partido político, Westalis mobiliza Twilight, seu melhor agente, a montar uma <br> família falsa e se infiltrar nos eventos sociais promovidos pela escola do filho do político. Mas por um acaso do <br> destino, Twilight acaba adotando Anya, uma jovem com poderes telepáticos, e se "casando" com Yor, uma <br> assassina profissional! Sem saberem das identidades uns dos outros, este trio incomum vai embarcar em aventuras <br> cheias de surpresas para garantir a paz mundial.
+          <a class="verr verPromo" href="/crunch/seriesmodelo.html"> <strong><span class="seta">▷</span> <span class="com">COMEÇAR A ASSISTIR S1 E1</span></strong></a>
+          <img class="salvarr" src="imgs/filme e serie modelo/salvar laranja.png" alt="salvarL"> 
+        </p>
 
       </div>
 
